# kip

./: pyproject.toml
images/: labeling_new
images/augmented_labels/: brightness_image0002743_Label.tif  brightness_image0002771_Label.tif  brightness_image0002799_Label.tif  brightness_image0002831_Label.tif  brightness_image0002858_Label.tif  brightness_image0002882_Label.tif  brightness_image0002979_Label.tif  brightness_image0003006_Label.tif  brightness_image0003042_Label.tif  brightness_image0003070_Label.tif  brightness_image0003098_Label.tif  brightness_image0003126_Label.tif  brightness_image0003154_Label.tif  brightness_image0003282_Label.tif  brightness_image0003310_Label.tif  brightness_image0003318_Label.tif  brightness_image0003323_Label.tif  brightness_image0003334_Label.tif  brightness_image0003362_Label.tif  brightness_image0003390_Label.tif  brightness_image0003401_Label.tif  brightness_image0003440_Label.tif  brightness_image0003446_Label.tif  brightness_image0003478_Label.tif  brightness_image0003483_Label.tif  contrast_image0002721_Label.tif  contrast_image0002906_Label.tif  contrast_image0002931_Label.tif  contrast_image0002955_Label.tif  contrast_image0003182_Label.tif  contrast_image0003210_Label.tif  contrast_image0003234_Label.tif  contrast_image0003258_Label.tif  contrast_image0003418_Label.tif  hflip_image0002687_Label.tif  hflip_image0002721_Label.tif  hflip_image0002743_Label.tif  hflip_image0002771_Label.tif  hflip_image0002799_Label.tif  hflip_image0002831_Label.tif  (+191 more)
notebooks/: 01-Introduction.ipynb  02-Data_preprocessing.ipynb
(+31 files in other folders)
